# groundcrew

./: .gitignore  README.md  config.yaml  example_session.md  groundcrew_openai_config.yaml  pyproject.toml  requirements.txt
demos/: demo_dotNetExtractorProcess.py  demo_newline_correction.py  demo_ollamaapi.py  demo_pythonnet_calls.py  dotNet_calls.py  error_correction.py
dotNet/: CodeExtractor.sln  readme.md
dotNet/ClassLibrary1/: Class1.cs
dotNet/ClassLibrary1/Properties/PublishProfiles/: FolderProfile.pubxml
dotNet/CodeExtractor/: CSharpCodeExtractor.cs  CSharpUsageAnalyzer.cs  CodeExtractor.cs  CodeExtractor.csproj  ComplexityAnalyzer.cs  DebugCompilation.cs  NodeType.cs  ObjectExtensions.cs
dotNet/CodeExtractor.App/: CodeExtractor.App.csproj  DemoExampleClass.cs  Program.cs
dotNet/CodeExtractor.App/Properties/: launchSettings.json
dotNet/CodeExtractor.App/Properties/PublishProfiles/: FolderProfile.pubxml
dotNet/CodeExtractor.Tests/: CSharpCodeExtractorShould.cs  CSharpComplexityAnalyzerShould.cs  CodeExtractor.Tests.csproj  CodeExtractorShould.cs  ExampleClass.cs
scripts/: run.py
src/groundcrew/: agent.py  code.py  code_analyser_csharp.py  code_analyser_python.py  dataclasses.py  system_prompts.py  tools.py  utils.py
src/groundcrew/llm/: llmapi.py  ollamaapi.py  openaiapi.py
tests/: test_code_analyser_python.py  test_tools.py
tests/llm/: demo_ollamaapi.py  test_ollamaapi.py  test_openaiapi.py
