[build-system]
requires = [
    "setuptools>=65.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "groundcrew"
version = "0.1.0"
authors = [
  {name="Prolego, Inc.", email="russ@prolego.com"},
]
description = "A natural language tool to interact with an entire codebase."
readme = "README.md"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    #"datasets>=2.10.1",
    #"nltk==3.8.1",
    #"numpy>=1.24.2",
    #"openai>=1.6.1",
    #"rank_bm25==0.2.2",
    #"sentence-transformers==2.2.2",
    #"torch>=2.0.0",
    #"tqdm>=4.65.0"
    "openai>=1.6.1",
    "torch>=2.1.0",
    "pyyaml (>=6.0.2,<7.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "astunparse (>=1.6.3,<2.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "radon (>=6.0.1,<7.0.0)",
    "yaspin (>=3.1.0,<4.0.0)",
    "thefuzz (>=0.22.1,<0.23.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "pytest (>=8.3.4,<9.0.0)",
]

[project.urls]
"Homepage" = "https://github.com/prolego-team/groundcrew"
